src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.scss
/* ==========================================================================
   #FLAG (AKA MEDIA OBJECT)
   ========================================================================== */
@import '@bolt/tools-spacing';

$bolt-flag-sizes: (
  'small',
  'medium'
);

$bolt-flag-alignments: (
  'top': flex-start,
  'middle': center,
  'bottom': flex-end
);


.o-bolt-flag {
  // display: table;
  // width: 100%;
  @include bolt-margin-bottom(medium);
  display: flex;
  align-items: flex-start;
}

.o-bolt-flag__body {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
}


// .o-bolt-flag__figure {

//   // .o-bolt-flag--rev & {
//   //   padding-right: 0;
//   //   padding-left: $spacing-unit;
//   // }
// }




.o-bolt-flag--rev {
  direction: rtl;

  > .o-bolt-flag__body {
    direction: ltr;
  }
}


// // Vertical alignment
// .o-bolt-flag--top > * {
//   vertical-align: top;
// }

// .o-bolt-flag--center > * {
//   vertical-align: middle;
// }

// .o-bolt-flag--bottom > * {
//   vertical-align: bottom;
// }
// // Flag alignment
@each $alignment, $value in $bolt-flag-alignments {
  .o-bolt-flag--#{$alignment} {
    align-items: $value;
    vertical-align: $alignment;
  }
}



// Flag sizes
@each $size in $bolt-flag-sizes {
  .o-bolt-flag--#{$size} > .o-bolt-flag__figure {
    @include bolt-margin-right($size);
  }
}





//
//
// // Flexbox adjustments
// @supports (display: flex) {
//   .o-flag {
//     display: flex;
//     align-items: flex-start;
//
//     &--center {
//       align-items: center;
//     }
//
//     &--bottom {
//       align-items: flex-end;
//     }
//
//     &--rev .o-bolt-flag__image {
//       order: 1;
//       padding-left: $spacing-unit;
//       padding-right: $spacing-unit;
//     }
//   }
//
//
//   .o-bolt-flag__image,
//   .o-bolt-flag__body {
//       display: initial;
//   }
//
//   .o-bolt-flag__body {
//     // min-width: 0;
//     // flex: 1 1 auto;
//     flex: 1;
//   }
// }

